# cmake-tests

./: CMakeLists.txt  README.md  compile  compile_commands.json
src/: CMakeLists.txt  main.cpp  mylib.cpp
